# tetka

./: .gitignore  Cargo.toml  makefile
.github/workflows/: ci.yml
ataxx/: Cargo.toml  README.md
ataxx/src/: bitboard.rs  board.rs  color.rs  hash.rs  lib.rs  move.rs  perft.rs  piece.rs  position.rs  square.rs  type_macros.rs
ataxx/tests/: perft.rs
games/: Cargo.toml  LICENSE
games/ataxx/: Cargo.toml
games/ataxx/src/: bitboard.rs  hash.rs  lib.rs  move.rs  perft.rs  piece.rs  position.rs  square.rs
games/src/: bitboard.rs  lib.rs
games/src/ataxx/: bitboard.rs  hash.rs  mod.rs  move.rs  moves.rs  perft.rs  piece.rs  position.rs  square.rs
games/src/ataxx/tests/: mod.rs
games/src/chess/: bitboard.rs  castling.rs  color.rs  mod.rs  move.rs  movegen.rs  moves.rs  position.rs  square.rs  zobrist.rs
games/src/interface/: bitboard.rs  hash.rs  mod.rs  move.rs  piece.rs  position.rs  square.rs
gui/: Cargo.toml
gui/src/: gui.rs  main.rs
mexx/: Cargo.toml
mexx/src/: options.rs
mexx/src/mcts/: mod.rs  node.rs  policy.rs  simulate.rs
src/: lib.rs  main.rs
src/ataxx/: bitboard.rs  board.rs  color.rs  fen.rs  hash.rs  mod.rs  move.rs  square.rs  zobrist.rs
src/commands/: context.rs  go.rs  mod.rs  position.rs  simple.rs
src/mcts/: graph.rs  mod.rs  node.rs  params.rs  policy.rs  tree.rs  value.rs
src/mcts/tree/: lru.rs  mod.rs  node.rs  tree.rs
src/util/: mod.rs  type_macros.rs
uai/: Cargo.toml
uai/src/: client.rs  cmd.rs  context.rs  flag.rs  inbuilt.rs  lib.rs  parameter.rs
uxi/: Cargo.toml  README.md  rustfmt.toml
uxi/src/: bundles.rs  client.rs  cmd.rs  context.rs  flag.rs  inbuilt.rs  lib.rs  parameter.rs
