[package]
name = "ataxx"
version = "0.2.0"
edition = "2021"

authors = ["Rak Laptudirm <rak@laptudirm.com>"]

license = "Apache-2.0"
description = "A Rust library for the game Ataxx"
repository = "https://github.com/raklaptudirm/mexx"
keywords = ["ataxx"]
categories = ["games"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"
strum = "0.26"
strum_macros = "0.26"
