[package]
name = "tetka-games"
version = "0.1.0"
edition = "2021"

authors = ["Rak Laptudirm <rak@laptudirm.com>"]

license = "Apache-2.0"
description = "Rust implementations of various games"
repository = "https://github.com/raklaptudirm/tetka"
keywords = ["ataxx"]
categories = ["games"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"
derive_more = "0.99.18"
strum = "0.26"
strum_macros = "0.26"
arrayvec = "0.7.4"
