[package]
name = "ataxx-uai"
version = "0.1.0"
edition = "2021"

authors = ["Rak Laptudirm <rak@laptudirm.com>"]

license = "Apache-2.0"
description = "A Rust library for creating UAI compliant engines"
repository = "https://github.com/raklaptudirm/mexx"
keywords = ["ataxx", "uai"]
categories = ["games"]
